--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@tiptap/extension-image": "^3.15.3",
     "@tiptap/extension-link": "^3.15.3",
     "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "marked": "^12.0.2",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
