--- a/package.json
+++ b/package.json
@@ -35,5 +35,12 @@
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "chrome >= 87",
+    "firefox >= 78",
+    "edge >= 88",
+    "safari >= 14",
+    "ios >= 14"
+  ]
 }
